# tides-api

.github/workflows/: apis.yml  rust.yml
api/dotnet/src/: Function.cs  S3Client.cs  TidesApi.csproj  aws-lambda-tools-defaults.json
api/rust/: Cargo.toml
api/rust/src/: main.rs  s3.rs
fetch/: Cargo.toml
fetch/dotnet/src/: Function.cs  S3Client.cs  Tides.cs
fetch/local/: Program.cs  local.csproj
fetch/rust/src/: s3.rs
fetch/src/: AdmiraltyTide.cs  App.cs  DailyTide.csproj  Dockerfile  Dockerfile.ApiGateway  Function.cs  InputRequest.cs  S3Client.cs  SnsClient.cs  Tides.cs  aws-lambda-tools-defaults.json  main.rs  tides.rs
