[package]
name = "coutts-white-tides-background"
version = "0.1.0"
authors = ["Alex White <alex_p_white@yahoo.co.uk>"]
edition = "2018"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.2.1"
serde = { version = "^1.0", features = ["derive"] }
rusoto_core = "0.46.0"
rusoto_s3 = "0.46.0"
bytes = "1.0.1"
futures = { version = "0.3", features = ["compat"] }
reqwest = "0.11.3"
chrono = "0.4.19"
# Add openssl-sys as a direct dependency so it can be cross compiled to
# x86_64-unknown-linux-musl using the "vendored" feature below
openssl-sys = "*"

[[bin]]
name = "bootstrap"
path = "src/main.rs"


[features]
# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored = ["openssl-sys/vendored"]