[package]
name = "coutts-white-tides-api"
version = "0.1.0"
authors = ["Alex White <alex_p_white@yahoo.co.uk>"]
edition = "2018"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.2.1"
serde = { version = "^1.0", features = ["derive"] }
rusoto_core = "0.46.0"
rusoto_s3 = "0.46.0"
bytes = "1.0.1"
futures = { version = "0.3", features = ["compat"] }

[[bin]]
name = "bootstrap"
path = "src/main.rs"